fix: customer